Refactor and reorg

--- a/heart.cone.2a.html
+++ b/heart.cone.2a.html
@@ -13,7 +13,7 @@
 	  Geometry, Using Highly Improved Siding Algorithm <br/>
 	  GL: Using Index Array, Element Draw<br/>
       <canvas id = "cone1 heart geometry" width = "400" height = "400"  class="yellow">
-         <script src="./webgl2a/cone1_heart_geometry3a.js"></script>
+         <script src="./heart.cone.2a/cone1_heart_geometry3a.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
