--- a/webgpu1.html
+++ b/webgpu1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-   <title>webgl test</title>
+   <title>webgpu test</title>
    <link rel="stylesheet" href="./css/default.css">
    <script src="./gljs/glcanvas.js"></script>
    <script src="./gpujs/gpucanvas.js"></script>
