--- a/camera.html
+++ b/camera.html
@@ -3,7 +3,7 @@
 </head>
 <body>
    <!-- canvas width="100" height="100"><video autoplay></video></canvas -->
-    <script src="./gljs/api.js"></script>
+    <script src="./lib/js/general/api.js"></script>
 
    <!-- video autoplay></video-->
    <script>
