--- a/heart.cone.4.html
+++ b/heart.cone.4.html
@@ -2,9 +2,9 @@
 <head>
    <title>webgl test</title>
    <title>webgl test</title>
-   <script src="./gljs/glcanvas.js"></script>
-   <script src="./gljs/glmath.js"></script>
-   <script src="./gljs/menu.js"></script>
+   <script src="./lib/js/gl2js/glcanvas.js"></script>
+   <script src="./lib/js/math/3dmath.js"></script>
+   <script src="./lib/js/general/menu.js"></script>
 </head>
 <body>
    <div class="sample">
