--- a/texture.html
+++ b/texture.html
@@ -60,6 +60,6 @@ Otherwise the sample would be full of code not related to the point of the sampl
 For more info see https://webgl2fundamentals.org/webgl/lessons/webgl-less-code-more-fun.html
 -->
 <script src="https://webgl2fundamentals.org/webgl/resources/twgl-full.min.js"></script>
-<script src="./3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
-<script src="./gljs/glcanvas.js"></script>
+<script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
+<script src="./lib/js/gl2js/glcanvas.js"></script>
 <script src="./texture/texture.js"></script>
