--- a/draw.simple.1.html
+++ b/draw.simple.1.html
@@ -1,9 +1,9 @@
 <html>
 <head>
    <title>webgl test</title>
-   <link rel="stylesheet" href="./css/default.css">
-   <script src="./gljs/glcanvas.js"></script>
-   <script src="./gljs/glmath.js"></script>
+   <link rel="stylesheet" href="./lib/css/default.css">
+   <script src="./lib/js/gl2js/glcanvas.js"></script>
+   <script src="./lib/js/math/3dmath.js"></script>
       
 </head>
 <body>
