--- a/heightMap.html
+++ b/heightMap.html
@@ -3,12 +3,12 @@
    <title>Height map 1, basic</title>
 </head>
 <body>
-   <script src="./3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
+   <script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
 
-   <script src="./gljs/api.js"></script>
-   <script src="./gljs/glmath.js"></script>
-   <script src="./gljs/glcanvas.js"></script>
-   <script src="./gljs/glcontroller.js"></script>
+   <script src="./lib/js/general/api.js"></script>
+   <script src="./lib/js/math/3dmath.js"></script>
+   <script src="./lib/js/gl2js/glcanvas.js"></script>
+   <script src="./lib/js/gl2js/glcontroller.js"></script>
 
    <canvas id="HeightMapButuceni" width="400" height = "300">
       <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
