--- a/renderToTexture.html
+++ b/renderToTexture.html
@@ -2,16 +2,16 @@
 <head>
    <title>Render To Texture + Height Map</title>
 
-   <link rel="stylesheet" href="./css/default.css">   
+   <link rel="stylesheet" href="./lib/css/default.css">   
 
 </head>
 <body>
-   <script src="./3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
+   <script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
 
-   <script src="./gljs/api.js"></script>
-   <script src="./gljs/glmath.js"></script>
-   <script src="./gljs/glcanvas.js"></script>
-   <script src="./gljs/glcontroller.js"></script>
+   <script src="./lib/js/general/api.js"></script>
+   <script src="./lib/js/math/3dmath.js"></script>
+   <script src="./lib/js/gl2js/glcanvas.js"></script>
+   <script src="./lib/js/gl2js/glcontroller.js"></script>
 
    <div class="sample">
       <canvas id="CraterArizonaDirect" width="320" height = "240">
