--- a/textureManual2.html
+++ b/textureManual2.html
@@ -35,10 +35,10 @@
    for webgl-utils, m3, m4, and webgl-lessons-ui.
    -->
    <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
-   <script src="./3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
-   <script src="./gljs/api.js"></script>
-   <script src="./gljs/glmath.js"></script>
-   <script src="./gljs/glcanvas.js"></script>
+   <script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
+   <script src="./lib/js/general/api.js"></script>
+   <script src="./lib/js/math/3dmath.js"></script>
+   <script src="./lib/js/gl2js/glcanvas.js"></script>
    <script src="./texture/textureManual2.js"></script>
 
 </body>
