--- a/textureVideo.html
+++ b/textureVideo.html
@@ -1,13 +1,13 @@
 <html>
 <head>
    <title>Texture Manual 1 a, basic</title>
-   <link rel="stylesheet" href="./css/default.css">
+   <link rel="stylesheet" href="./lib/css/default.css">
 </head>
 <body>
-   <script src="./3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
-   <script src="./gljs/api.js"></script>
-   <script src="./gljs/glmath.js"></script>
-   <script src="./gljs/glcanvas.js"></script>
+   <script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
+   <script src="./lib/js/general/api.js"></script>
+   <script src="./lib/js/math/3dmath.js"></script>
+   <script src="./lib/js/gl2js/glcanvas.js"></script>
 
    <div class="sample">
       F: Adapted webglfundamentals sample<br/>
@@ -131,7 +131,7 @@
               crossorigin="anonymous" defer=""></script -->
          <!-- copied from https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix.js copyright included -->
          <!-- copied from https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js copyright included -->
-	     <script src="./3rdparty/cdnjs.cloudflare.com_ajax_libs_gl-matrix_2.8.1_gl-matrix-min.js"></script>
+	     <script src="./lib/js/3rdparty/cdnjs.cloudflare.com_ajax_libs_gl-matrix_2.8.1_gl-matrix-min.js"></script>
          <script src="./textureVideo/mozillaCube3DTextureVideoDrawIndexed.js"  type="module"></script>
       </canvas>
    </div><br/>
@@ -148,54 +148,6 @@
         <!-- crossorigin="anonymous" -->
    base:<img id="imgBasic" style="display:none"  src="./texture/f-texture.png" /><br/>
    Tipova:<!-- img id="imgTipova" src="./heightMap/tipova.png" / --><br/>
-   <a href="https://www.khronos.org/blog/ray-tracing-in-vulkan">Kronos, Ray tracing in Vulkan, with extensions</a> <br/>
-   <a href="http://www.opengl-tutorial.org/intermediate-tutorials/billboards-particles/particles-instancing/">OpenGL tutorial, particles instancing</a> <br/>
-   <a href="objFile.html">Using obj file, mine</a> <br/>
-   <a href="webgl1.html">WebGL1 many samples, mine</a> <br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGPU_APIl">Mozilla WebGPU</a> <br/>
-   <a href="https://mdn.github.io/dom-examples/webgpu-render-demo">WebGPU, triangle, mozilla demo</a> <br/>
-   <a href="samples/WebGPU%20triangle.html">WebGPU, triangle, local: mozilla demo</a> <br/>
-   <a href="https://www.khronos.org/api/index_2017/gltf">Kronos 3rdparty use modelviewer web GlTF</a> <br/>
-   <a href="https://modelviewer.dev/">3rdparty use modelviewer web GlTF</a> <br/>
-   <a href="https://en.wikipedia.org/wiki/GlTF">Wikipedia GlTF format</a> <br/>
-   <a href="objFile.html">Using obj file, mine</a> <br/>
-   <a href="hhttps://registry.khronos.org/OpenGL-Refpages/es3.0/html/texture.xhtml">kronos texture GLSL es 300 shader</a> <br/>
-   <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a> <br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext/texImage2D">WebGL textImage2D</a> <br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Animating_textures_in_WebGL">Texture with video, manual</a> <br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLVideoElement">HTMLVideoELement</a> <br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/video">Video element</a> <br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/loadeddata_event">Media, loaded data event</a> <br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/timeupdate_event">Media, time update event</a> <br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/playing_event">Media, playing event</a> <br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise/Promise">Promise</a> <br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener">Event Listener</a> <br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener#once">Event Listener, option once</a> <br/>
-   <a href="https://stackoverflow.com/questions/76592396/remove-promise-callbacks-from-video-events">Stackoverflow response, event once</a> <br/>
-   <a href="https://en.wikipedia.org/wiki/IRIS_GL">Wikipedia Iris GL: historical</a> <br/>
-   <a href="https://en.wikipedia.org/wiki/WebGPU">Wikipedia WebGPU</a> <br/>
-   <a href="https://en.wikipedia.org/wiki/UVW_mapping">Wikipedia UVW mapping</a> <br/>
-   <a href="https://www.w3.org/TR/webgpu/">w3 specs WebGPU</a> <br/>
-   <a href="https://learnopengl.com/Advanced-Lighting/Shadows/Shadow-Mapping">Learn OpenGL Shadow Mapping</a> <br/>
-   <a href="http://www.opengl-tutorial.org/intermediate-tutorials/tutorial-16-shadow-mapping/">OpenGL tutorial, shadow mapping</a> <br/>
-   <a href="https://webglfundamentals.org/webgl/lessons/webgl-render-to-texture.html">WebGL fundamentals, Rendering to texture</a> <br/>
-   <a href="https://learn.microsoft.com/en-us/windows/win32/opengl/porting-to-opengl">Learn Microsoft, Porting to OpenGL</a> <br/>
-   <a href="https://registry.khronos.org/OpenGL-Refpages/gl4/html/glVertexAttribPointer.xhtml">Kronos, glVertexAttribPointer</a> <br/>
-   <a href="https://registry.khronos.org/OpenGL-Refpages/gl4/html/glDrawElementsInstanced.xhtml">Kronos, glDrawElementsInstanced</a> <br/>
-   <a href="https://www.khronos.org/spir/">Kronos, SPIR-V</a> <br/>
-   <a href="https://registry.khronos.org/SPIR-V/specs/unified1/SPIRV.html">Kronos, SPIR-V Specifications</a> <br/>
-   <a href="https://en.wikipedia.org/wiki/Standard_Portable_Intermediate_Representation">Wikipedia, SPIR-V</a> <br/>
-   <a href="https://developers.google.com/maps/documentation/javascript/reference/webgl">Google Maps JavaScript API Reference, WebGL </a> <br/>
-   <a href="https://en.wikipedia.org/wiki/Vulkan">Wikipedia Vulkan</a> <br/>
-   <a href="https://vulkan-tutorial.com/Compute_Shader">Vulkan Compute Shader</a> <br/>
-   <a href="https://vulkan-tutorial.com/Drawing_a_triangle/Graphics_pipeline_basics/Introduction">Vulkan Graphics Pipeline Introduction</a> <br/>
-   <a href="https://vulkan-tutorial.com/Vertex_buffers/Vertex_input_description">Vulkan Vertex Input Description</a> <br/>
-   <a href="https://www.google.com/search?q=webgpu">Google WebGPU search</a> <br/>
-   <a href="https://community.khronos.org/t/re-select-gpu-for-gpgpu-purposes/109864">WebGL for GPGPU, community forum question/responses</a> <br/>
-   <a href="http://fmi.usm.md/sites/default/files/BasicPagesAttachments/Ghid%20metodic%20pentru%20elaborarea%20tezelor.pdf">USM Ghid Metodic pentru elaborarea tezelor</a> <br/>
-   <a href="http://fmi.usm.md/ro/ExamenLicenta">USM Examen Licenta</a> <br/>
-   <a href="C:/Users/filip/OneDrive/Desktop/Work/3D/TipovaFormate/obj/Felicia-Ionescu-Programarea-aplicatiilor-grafice.pdf">HDD Local, Felicia Ionescu: Programarea aplicatiilor grafice</a> <br/>
-   <a href="https://www.geogebra.org/">GeoGebra</a> <br/>
 
    <!--
    for most samples webgl-utils only provides shader compiling/linking and
@@ -204,6 +156,6 @@
    and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
    for webgl-utils, m3, m4, and webgl-lessons-ui.
    -->
-
+   <a href="./tutorials.html">Tutorials</a>
 </body>
 </html>
