--- a/webgpu1.html
+++ b/webgpu1.html
@@ -1,10 +1,10 @@
 <html>
 <head>
    <title>webgpu test</title>
-   <link rel="stylesheet" href="./css/default.css">
-   <script src="./gljs/glmath.js"></script>
-   <script src="./gljs/glcanvas.js"></script>
-   <script src="./gpujs/gpucanvas.js"></script>
+   <link rel="stylesheet" href="./lib/css/default.css">
+   <script src="./lib/js/math/3dmath.js"></script>
+   <script src="./lib/js/gl2js/glcanvas.js"></script>
+   <script src="./lib/js/gpujs/gpucanvas.js"></script>
    <script src="./experiment/experiment.js"></script>
 </head>
 <body>
@@ -14,10 +14,10 @@
         <script src="./webgpu1/webgpu1.js" defer=""></script>
         <script>
            document.addEventListener("wheel", (event) =>
-           {
-              if (event.ctrlKey)
-                 event.preventDefault();
-           });
+            {
+               if (event.ctrlKey)
+                  event.preventDefault();
+            });
         </script>
       </canvas>
    </div>
@@ -26,24 +26,24 @@
       <canvas id="gpuCanvas" width="160" height="120">
         <script src="./webgpu1/webgpu2.js" defer=""></script>
         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
-           struct VertexOut
-           {
-              @builtin(position) position : vec4f,
-              @location(0) color : vec4f
-           }
-           @vertex
-           fn vertex_main(@location(0) position: vec4f, @location(1) color: vec4f) -> VertexOut
-           {
-              var output : VertexOut;
-              output.position = position;
-              output.color = color;
-              return output;
-           }
-           @fragment
-           fn fragment_main(fragData: VertexOut) -> @location(0) vec4f
-           {
-              return fragData.color;
-           }
+            struct VertexOut
+            {
+               @builtin(position) position : vec4f,
+               @location(0) color : vec4f
+            }
+            @vertex
+            fn vertex_main(@location(0) position: vec4f, @location(1) color: vec4f) -> VertexOut
+            {
+               var output : VertexOut;
+               output.position = position;
+               output.color = color;
+               return output;
+            }
+            @fragment
+            fn fragment_main(fragData: VertexOut) -> @location(0) vec4f
+            {
+               return fragData.color;
+            }
         </script>
       </canvas>
    </div>
