Refactoring and reorg

--- a/webgpu1.html
+++ b/webgpu1.html
@@ -5,7 +5,7 @@
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
    <script src="./lib/js/gpujs/gpucanvas.js"></script>
-   <script src="./experiment/experiment.js"></script>
+   <script src="./lib/js/experiment/experiment.js"></script>
 </head>
 <body>
    <div class="sample">
