--- a/renderToTexture.html
+++ b/renderToTexture.html
@@ -14,6 +14,7 @@
    <script src="./lib/js/gl2js/glcontroller.js"></script>
 
    <div class="sample">
+      Render to Canvas<br/>
       <canvas id="CraterArizonaDirect" width="320" height = "240">
          <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
             #version 300 es
@@ -54,6 +55,7 @@
       </canvas>
    </div>
    <div class="sample">
+      Render to Texture<br/>
       <canvas id="CraterArizonaToFramebuffer" width="320" height = "240">
       
          <!-- This is main target -->
@@ -117,13 +119,15 @@
 	     <script src="./renderToTexture/renderToTexture.js"></script>
       </canvas>
    </div><br/>
-   <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
-      <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./heightMap/height-map.vs" ></script>
-      <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./heightMap/height-map.fs" ></script>
-      <script src="./renderToTexture/renderToTexture.uiproxy.js"></script>
-
-   </canvas><!-- br/ -->
-
+   <div class="sample">
+      Render to Offscreen Canvas in worker<br/>
+      <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
+         <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./heightMap/height-map.vs" ></script>
+         <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./heightMap/height-map.fs" ></script>
+         <script src="./renderToTexture/renderToTexture.uiproxy.js"></script>
+   
+      </canvas><!-- br/ -->
+   </div>
    <br/>
    <!-- video id="video"  height="90" width="160" src="./video/flower.mp4" autoplay muted loop  > </video>
    <video id="video1" height="90" width="160" autoplay muted loop>
