Separete ./texture/ context from textureVideo and objFile

--- a/texture.html
+++ b/texture.html
@@ -69,6 +69,7 @@
    <script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
    <script src="./lib/js/gl2js/glcanvas.js"></script>
    <script src="./lib/js/general/api.js"></script>
+   <script src="./lib/js/math/3dmath.js"></script>
    <script src="./texture/texture.js"></script>
    <!-- script src="./texture/textureManual.js"></script -->
 </body>
