--- a/heightMap.html
+++ b/heightMap.html
@@ -51,7 +51,7 @@
    <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
       <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./heightMap/height-map.vs" ></script>
       <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./heightMap/height-map.fs" ></script>
-      <script src="./heightMap/heightMap.uiproxy.js"></script>
+      <script  src="./heightMap/heightMap.uiproxy.js"></script>
 
    </canvas><!-- br/ -->
 
@@ -62,7 +62,7 @@
       <source src="./video/flower.mp4" type="video/mp4">
    </video><br/>
         <!-- crossorigin="anonymous" -->
-   base:<br/><img id="imgBasic" style="display:none"  src="./texture/f-texture.png" /><br/>
+   base:<br/><img id="imgBasic" style="display:none"  src="./heightMap/f-texture.png" /><br/>
    Tipova:<!-- br/><img id="imgTipova" src="./heightMap/tipova.png" /><br/ -->
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a>
    <!--
