--- a/tutorials.html
+++ b/tutorials.html
@@ -95,6 +95,17 @@
    <a href="http://fmi.usm.md/ro/ExamenLicenta">USM Examen Licenta</a> <br/>
    <a href="C:/Users/filip/OneDrive/Desktop/Work/3D/TipovaFormate/obj/Felicia-Ionescu-Programarea-aplicatiilor-grafice.pdf">HDD Local, Felicia Ionescu: Programarea aplicatiilor grafice</a> <br/>
    <a href="https://www.geogebra.org/">GeoGebra</a> <br/>
+   <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a>
+   <!--
+   for most samples webgl-utils only provides shader compiling/linking and
+   canvas resizing because why clutter the examples with code that's the same in every sample.
+   See https://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html
+   and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
+   for webgl-utils, m3, m4, and webgl-lessons-ui.
+   -->
+   <a href="https://trezy.com/blog/loading-images-with-web-workers">Load Image With Web Workers</a>
+   <!-- script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script -->
+
 
 </body>
 </html>
