Separate objFile, textureManual1, heightMap, texture

--- a/objFile.html
+++ b/objFile.html
@@ -130,8 +130,8 @@
       </video><br/>
       <!-- crossorigin="anonymous" -->
       Basic Letter F Texture:<br/><img id="imgBasic" src="./objFile/f-texture.png" /><br/>
-      Tipova big WB Heigth Map, actually good (commented):<br/><!-- img id="imgTipova" src="./heightMap/tipova.png" /><br/ -->
-      <a href="./tutorials.html">Tutorials</a>
+      Tipova big WB Heigth Map, actually good (commented):<br/><!-- img id="imgTipova" src="./objFile/tipova.png" /><br/ -->
    </div><br/>
+   <a href="./tutorials.html">Tutorials</a>
 </body>
 </html>
