--- a/textureManual1.html
+++ b/textureManual1.html
@@ -31,8 +31,8 @@
       <source src="./video/flower.mp4" type="video/mp4">
    </video><br/>
         <!-- crossorigin="anonymous" -->
-   base:<br/><img id="imgBasic" style="display:none"  src="./texture/f-texture.png" /><br/>
-   Tipova:<!-- br/><img id="imgTipova" src="./heightMap/tipova.png" /><br/ -->
+   base:<br/><img id="imgBasic" style="display:none"  src="./textureManual1/f-texture.png" /><br/>
+   Tipova:<!-- br/><img id="imgTipova" src="./textureManual1/tipova.png" /><br/ -->
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a>
    <!--
    for most samples webgl-utils only provides shader compiling/linking and
@@ -46,6 +46,6 @@
    <script src="./lib/js/general/api.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
-   <script src="./texture/textureManual1.js"></script>
+   <script src="./textureManual1/textureManual1.js"></script>
 </body>
 </html>
