--- a/heightMap.html
+++ b/heightMap.html
@@ -3,14 +3,17 @@
    <title>Height map 1, basic</title>
 </head>
 <body>
+   <link rel="stylesheet" href="./lib/css/default.css">
    <script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
 
    <script src="./lib/js/general/api.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
    <script src="./lib/js/gl2js/glcontroller.js"></script>
-
-   <canvas id="HeightMapButuceni" width="400" height = "300">
+   <div class="sample">
+      TODO: Big performance issues with offscreen canvas, to investigate<br/>
+   </div>
+   <canvas class="green" id="HeightMapButuceni" width="400" height = "300">
       <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
          #version 300 es
          layout (location = 0) in vec3 vert;
@@ -46,34 +49,28 @@
             FragColor = vec4( terrainColor.rgb * strength, terrainColor.a);
          }
       </script>
-	  <script src="./heightMap/heightMap.js"></script>
+	   <script src="./heightMap/heightMap.js"></script>
    </canvas><br/>
-   <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
+   <canvas class="green" id="HeightMapButuceniOffscreen" width="400" height = "300">
       <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./heightMap/height-map.vs" ></script>
       <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./heightMap/height-map.fs" ></script>
       <script  src="./heightMap/heightMap.uiproxy.js"></script>
 
    </canvas><!-- br/ -->
-
    <br/>
-   <video id="video"  height="90" width="160" src="./video/flower.mp4" autoplay muted loop  > </video>
-   <video id="video1" height="90" width="160" autoplay muted loop>
-      <script>document.getElementById('video1').play();</script>
-      <source src="./video/flower.mp4" type="video/mp4">
-   </video><br/>
-        <!-- crossorigin="anonymous" -->
-   base:<br/><img id="imgBasic" style="display:none"  src="./heightMap/f-texture.png" /><br/>
-   Tipova:<!-- br/><img id="imgTipova" src="./heightMap/tipova.png" /><br/ -->
-   <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a>
-   <!--
-   for most samples webgl-utils only provides shader compiling/linking and
-   canvas resizing because why clutter the examples with code that's the same in every sample.
-   See https://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html
-   and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
-   for webgl-utils, m3, m4, and webgl-lessons-ui.
-   -->
-   <a href="https://trezy.com/blog/loading-images-with-web-workers">Load Image With Web Workers</a>
-   <!-- script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script -->
+   <div class="sample">
+      Show some static resources<br/>
+      <video id="video"  height="90" width="160" src="./video/flower.mp4" autoplay muted loop  > </video>
+      <video id="video1" height="90" width="160" autoplay muted loop>
+         <script>document.getElementById('video1').play();</script>
+         <source src="./video/flower.mp4" type="video/mp4">
+      </video><br/>
+      <!-- crossorigin="anonymous" -->
+      base:<br/><img id="imgBasic" src="./heightMap/f-texture.png" /><br/>
+      Tipova Big Heigth Map:<!-- br/><img id="imgTipova" src="./heightMap/tipova.png" /><br/ -->
+   </div>
+   <a href="./tutorials.html">Tutorials</a>
+
 
 
 </body>
