--- a/texture.html
+++ b/texture.html
@@ -71,6 +71,7 @@
    <script src="./lib/js/general/api.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./texture/texture.js"></script>
+   <!-- TODO: review/enable twgl sample from webgl2fundamentals.org: textureManual1.js -->
    <!-- script src="./texture/textureManual.js"></script -->
 </body>
 </html>
