--- a/textureManual.html
+++ b/textureManual.html
@@ -1,6 +1,9 @@
+TODO: make it project style<br/>
+TWGL Texture Sample, with 3D Letter F and 3D text<br/>
 <canvas id="canvas"></canvas>
 
 <script src="https://webgl2fundamentals.org/webgl/resources/twgl-full.min.js"></script>
 <script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
-<script src="./texture/textureManualShaders.js"></script>
-<script src="./texture/textureManual.js"></script>
+<script src="./textureManual/textureManualShaders.js"></script>
+<script src="./textureManual/textureManual.js"></script>
+<a href="./tutorials.html">Tutorials</a>
