--- a/textureManual1.html
+++ b/textureManual1.html
@@ -47,5 +47,7 @@
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
    <script src="./textureManual1/textureManual1.js"></script>
+   <a href="./tutorials.html">Tutorials</a>
+
 </body>
 </html>
