--- a/textureManual1combined2.html
+++ b/textureManual1combined2.html
@@ -3,6 +3,8 @@
    <title>Texture Manual 2, data textures</title>
 </head>
 <body>
+   TWGL Adapted (Partially?) To Project Style<br/>
+   TODO: Adapt Fully<br/>
    <canvas id="CubeBWTextureMap" width = "300" height = "300">
       <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
          attribute vec4 a_position;
@@ -49,19 +51,13 @@
    </canvas><br/>
    
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-data-textures.html">Texture 2, Data Textures manual</a>
-<!--
-   for most samples webgl-utils only provides shader compiling/linking and
-   canvas resizing because why clutter the examples with code that's the same in every sample.
-   See https://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html
-   and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
-   for webgl-utils, m3, m4, and webgl-lessons-ui.
-   -->
+
    <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
    <script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
    <script src="./lib/js/general/api.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
-   <script src="./texture/textureManual1combined2.js"></script>
-
+   <script src="./textureManual1combined2/textureManual1combined2.js"></script>
+   <a href="./tutorials.html">Tutorials</a>
 </body>
 </html>
