--- a/textureManual2.html
+++ b/textureManual2.html
@@ -39,7 +39,7 @@
    <script src="./lib/js/general/api.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
-   <script src="./texture/textureManual2.js"></script>
+   <script src="./textureManual2/textureManual2.js"></script>
 
 </body>
 </html>
