--- a/video_canvas.html
+++ b/video_canvas.html
@@ -15,7 +15,7 @@
     <div>
       <video
         id="video"
-        src="video/FirefoxGuy.mp4"
+        src="./video/FirefoxGuy.mp4"
         controls="true"
         crossorigin="anonymous" />
     </div>
@@ -23,6 +23,7 @@
       <canvas id="c1" width="160" height="96"></canvas>
       <canvas id="c2" width="160" height="96"></canvas>
     </div>
-    <script src="./texture/video-processor.js"></script>
+    <script src="./video_canvas/video-processor.js"></script>
+    <a href="./tutorials.html">Tutorials</a>
   </body>
 </html>
