--- a/textureVideo.html
+++ b/textureVideo.html
@@ -146,16 +146,8 @@
    </div>
    <br/ -->
         <!-- crossorigin="anonymous" -->
-   base:<img id="imgBasic" style="display:none"  src="./texture/f-texture.png" /><br/>
+   base:<img id="imgBasic" src="./textureVideo/f-texture.png" /><br/>
    Tipova:<!-- img id="imgTipova" src="./heightMap/tipova.png" / --><br/>
-
-   <!--
-   for most samples webgl-utils only provides shader compiling/linking and
-   canvas resizing because why clutter the examples with code that's the same in every sample.
-   See https://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html
-   and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
-   for webgl-utils, m3, m4, and webgl-lessons-ui.
-   -->
    <a href="./tutorials.html">Tutorials</a>
 </body>
 </html>
