--- a/textureVideo.html
+++ b/textureVideo.html
@@ -147,7 +147,7 @@
    <br/ -->
         <!-- crossorigin="anonymous" -->
    base:<img id="imgBasic" src="./textureVideo/f-texture.png" /><br/>
-   Tipova:<!-- img id="imgTipova" src="./heightMap/tipova.png" / --><br/>
+   Tipova:<!-- img id="imgTipova" src="./textureVideo/tipova.png" / --><br/>
    <a href="./tutorials.html">Tutorials</a>
 </body>
 </html>
