Rework texture, as the name doesn't represent the task

--- a/heightMap.html
+++ b/heightMap.html
@@ -11,8 +11,8 @@
    <script src="./lib/js/gl2js/glcanvas.js"></script>
    <script src="./lib/js/gl2js/glcontroller.js"></script>
    <div class="sample">
-      TODO: Big performance issues with offscreen canvas, to investigate<br/>
-   </div>
+      TODO: Big performance issues with offscreen canvas, to investigate
+   </div><br/>
    <canvas class="green" id="HeightMapButuceni" width="400" height = "300">
       <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
          #version 300 es
