--- a/renderToTexture.html
+++ b/renderToTexture.html
@@ -8,7 +8,7 @@
 <body>
    TODO: big performance issues with offscreen canvas, to investigate<br/>
    TODO: height map to texture inversed, to investigate<br/>
-   <script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
+   <script src="./3rdparty/twgl/js/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
 
    <script src="./lib/js/general/api.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
@@ -133,10 +133,10 @@
       </canvas><!-- br/ -->
    </div>
    <br/>
-   <!-- video id="video"  height="90" width="160" src="./video/flower.mp4" autoplay muted loop  > </video>
+   <!-- video id="video"  height="90" width="160" src="./3rdparty/video/flower.mp4" autoplay muted loop  > </video>
    <video id="video1" height="90" width="160" autoplay muted loop>
       <script>document.getElementById('video1').play();</script>
-      <source src="./video/flower.mp4" type="video/mp4">
+      <source src="./3rdparty/video/flower.mp4" type="video/mp4">
    </video><br/ -->
    <!-- crossorigin="anonymous" -->
    base:<br/><img id="imgBasic" src="./renderToTexture/f-texture.png" /><br/>
