--- a/textureVideo.html
+++ b/textureVideo.html
@@ -4,7 +4,7 @@
    <link rel="stylesheet" href="./lib/css/default.css">
 </head>
 <body>
-   <script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
+   <script src="./3rdparty/twgl/js/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
    <script src="./lib/js/general/api.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
@@ -131,17 +131,17 @@
               crossorigin="anonymous" defer=""></script -->
          <!-- copied from https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix.js copyright included -->
          <!-- copied from https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js copyright included -->
-	     <script src="./lib/js/3rdparty/cdnjs.cloudflare.com_ajax_libs_gl-matrix_2.8.1_gl-matrix-min.js"></script>
+	     <script src="./3rdparty/js/cdnjs.cloudflare.com_ajax_libs_gl-matrix_2.8.1_gl-matrix-min.js"></script>
          <script src="./textureVideo/mozillaCube3DTextureVideoDrawIndexed.js"  type="module"></script>
       </canvas>
    </div><br/>
 
    <!-- div>
       Video elements<br/>
-      <video id="video"  height="90" width="160" src="./video/flower.mp4" autoplay muted loop  > </video>
+      <video id="video"  height="90" width="160" src="./3rdparty/video/flower.mp4" autoplay muted loop  > </video>
       <video id="video1" height="90" width="160" autoplay muted loop>
          <script>document.getElementById('video1').play();</script>
-         <source src="./video/flower.mp4" type="video/mp4">
+         <source src="./3rdparty/video/flower.mp4" type="video/mp4">
       </video>
    </div>
    <br/ -->
