--- a/video_canvas.html
+++ b/video_canvas.html
@@ -15,7 +15,7 @@
     <div>
       <video
         id="video"
-        src="./video/FirefoxGuy.mp4"
+        src="./3rdparty/video/FirefoxGuy.mp4"
         controls="true"
         crossorigin="anonymous" />
     </div>
