--- a/textureManual.html
+++ b/textureManual.html
@@ -2,8 +2,8 @@ TODO: make it project style<br/>
 TWGL Texture Sample, with 3D Letter F and 3D text<br/>
 <canvas id="canvas"></canvas>
 
-<script src="https://webgl2fundamentals.org/webgl/resources/twgl-full.min.js"></script>
-<script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
+<script src="./3rdparty/twgl/js/twgl-full.v6.1.0.js"></script> <!-- copied from https://twgljs.org/dist/6.x/twgl-full.js, copyright included -->
+<script src="./3rdparty/twgl/js/m4.js"></script>
 <script src="./textureManual/textureManualShaders.js"></script>
 <script src="./textureManual/textureManual.js"></script>
 <a href="./tutorials.html">Tutorials</a>
