--- a/textureManual1combined2.html
+++ b/textureManual1combined2.html
@@ -53,7 +53,7 @@
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-data-textures.html">Texture 2, Data Textures manual</a>
 
    <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
-   <script src="./lib/js/3rdparty/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
+   <script src="./3rdparty/twgl/js/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
    <script src="./lib/js/general/api.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
