Separate global resources to separate unique categorized directories

--- a/heightMap.html
+++ b/heightMap.html
@@ -65,8 +65,8 @@
          <source src="./3rdparty/video/flower.mp4" type="video/mp4">
       </video><br/>
       <!-- crossorigin="anonymous" -->
-      base:<br/><img id="imgBasic" src="./heightMap/f-texture.png" /><br/>
-      Tipova Big Heigth Map:<!-- br/><img id="imgTipova" src="./heightMap/tipova.png" /><br/ -->
+      base:<br/><img id="imgBasic" src="./3rdparty/texture/f-texture.png" /><br/>
+      Tipova Big Heigth Map:<br/><!-- img id="imgTipova" src="./lib/heightmap/tipova.png" / --><br/>
    </div>
    <a href="./tutorials.html">Tutorials</a>
 
