--- a/objFile.html
+++ b/objFile.html
@@ -129,8 +129,8 @@
          <source src="./3rdparty/video/flower.mp4" type="video/mp4">
       </video><br/>
       <!-- crossorigin="anonymous" -->
-      Basic Letter F Texture:<br/><img id="imgBasic" src="./objFile/f-texture.png" /><br/>
-      Tipova big WB Heigth Map, actually good (commented):<br/><!-- img id="imgTipova" src="./objFile/tipova.png" /><br/ -->
+      Basic Letter F Texture:<br/><img id="imgBasic" src="./3rdparty/texture/f-texture.png" /><br/>
+      Tipova big WB Heigth Map, actually good (commented):<br/><img id="imgTipova" src="./lib/heightmap/tipova.png" /><br/>
    </div><br/>
    <a href="./tutorials.html">Tutorials</a>
 </body>
