--- a/textureManual1.html
+++ b/textureManual1.html
@@ -31,8 +31,8 @@
       <source src="./3rdparty/video/flower.mp4" type="video/mp4">
    </video><br/>
         <!-- crossorigin="anonymous" -->
-   base:<br/><img id="imgBasic" style="display:none"  src="./textureManual1/f-texture.png" /><br/>
-   Tipova:<!-- br/><img id="imgTipova" src="./textureManual1/tipova.png" /><br/ -->
+   base:<br/><img id="imgBasic" style="display:none"  src="./3rdparty/texture/f-texture.png" /><br/>
+   Tipova:<br/><!-- img id="imgTipova" src="./lib/heightmap/tipova.png" / --><br/>
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a>
    <!--
    for most samples webgl-utils only provides shader compiling/linking and
