--- a/textureVideo.html
+++ b/textureVideo.html
@@ -146,8 +146,8 @@
    </div>
    <br/ -->
         <!-- crossorigin="anonymous" -->
-   base:<img id="imgBasic" src="./textureVideo/f-texture.png" /><br/>
-   Tipova:<!-- img id="imgTipova" src="./textureVideo/tipova.png" / --><br/>
+   base:<img id="imgBasic" src="./3rdparty/texture/f-texture.png" /><br/>
+   Tipova:<!-- img id="imgTipova" src="./lib/heightmap/tipova.png" --><br/>
    <a href="./tutorials.html">Tutorials</a>
 </body>
 </html>
