--- a/renderToTexture.html
+++ b/renderToTexture.html
@@ -139,8 +139,8 @@
       <source src="./3rdparty/video/flower.mp4" type="video/mp4">
    </video><br/ -->
    <!-- crossorigin="anonymous" -->
-   base:<br/><img id="imgBasic" src="./renderToTexture/f-texture.png" /><br/>
-   Tipova:<!-- br/><img id="imgTipova" src="./renderToTexture/tipova.png" /><br/ -->
+   base:<br/><img id="imgBasic" src="./3rdparty/texture/f-texture.png" /><br/>
+   Tipova:<br/><!-- img id="imgTipova" src="./lib/heightmap/tipova.png" / --><br/>
    <a href="./tutorials.html">Tutorials</a>
 </body>
 </html>
