Fix textures for Capital F

--- a/textureTextCapitalF.html
+++ b/textureTextCapitalF.html
@@ -46,13 +46,13 @@
          <!-- This draws text texture on a corner of each F, positioned by u_matrix -->
          <script type="text/glsl-shader" data-gl-type="vertex-shader" data-gl-program="texture">
             #version 300 es
-            in vec4 a_position;
+            in vec2 a_position;
             in vec2 a_texcoord;
             uniform mat4 u_matrix;
             out vec2 v_texcoord;
             void main()
             {
-               gl_Position = u_matrix * a_position;
+               gl_Position = u_matrix * vec4 (a_position, 0, 1);
                v_texcoord = a_texcoord;
             }
          </script>
@@ -234,13 +234,12 @@
          <!-- This draws text texture using LIB and RAW, strip apart from above-->
          <script type="text/glsl-shader" data-gl-type="vertex-shader"  data-gl-program="texture">
             #version 300 es
-            in vec4 a_position;
+            in vec2 a_position;
             in vec2 a_texcoord;
-            uniform mat4 u_matrix;
             out vec2 v_texcoord;
             void main()
             {
-               gl_Position = u_matrix * a_position;
+               gl_Position = vec4 (a_position, 0, 1);
                v_texcoord = a_texcoord;
             }
          </script>
