--- a/tutorials.html
+++ b/tutorials.html
@@ -104,5 +104,7 @@
    for webgl-utils, m3, m4, and webgl-lessons-ui.
    -->
    <!-- script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script -->
+   <a href="https://webglfundamentals.org/webgl/lessons/webgl-data-textures.html">Texture 2, Data Textures manual</a>
+
 </body>
 </html>
