--- a/textureManual2.html
+++ b/textureManual2.html
@@ -1,45 +1,125 @@
 <html>
 <head>
    <title>Texture Manual 2, data textures</title>
-</head>
-<body>
-   <canvas id="CubeBWTextureMap" width = "300" height = "300">
-      <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
-         attribute vec4 a_position;
-         attribute vec2 a_texcoord;
-         uniform mat4 u_matrix;
-         varying vec2 v_texcoord;
-         void main()
-         {
-           gl_Position = u_matrix * a_position;
-           v_texcoord  = a_texcoord;
-         }
-      </script>
-      <script  type="text/glsl-shader" data-gl-type="fragment-shader">
-         precision mediump float;
-         varying vec2 v_texcoord;
-         uniform sampler2D u_texture;
-         void main()
-         {
-            gl_FragColor = texture2D(u_texture, v_texcoord);
-         }
-      </script>
-   </canvas><br/>
-   
-   <a href="https://webglfundamentals.org/webgl/lessons/webgl-data-textures.html">Texture 2, Data Textures manual</a>
-<!--
-   for most samples webgl-utils only provides shader compiling/linking and
-   canvas resizing because why clutter the examples with code that's the same in every sample.
-   See https://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html
-   and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
-   for webgl-utils, m3, m4, and webgl-lessons-ui.
-   -->
-   <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
+   <!-- TODO: unused webgl-utils? Make it local if used -->
+   <!-- TODO: unused m4 source review (copyright included) -->
+   <!-- script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script -->
    <script src="./3rdparty/twgl/js/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
    <script src="./lib/js/general/api.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
-   <script src="./textureManual2/textureManual2.js"></script>
+</head>
+<body>
+   <div class="sample">
+      Cube with texture pixels<br/>
+      <canvas id="CubeBWTextureMap" width = "200" height = "200">
+         <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
+            attribute vec4 a_position;
+            attribute vec2 a_texcoord;
+            uniform mat4 u_matrix;
+            varying vec2 v_texcoord;
+            void main()
+            {
+               gl_Position = u_matrix * a_position;
+               v_texcoord  = a_texcoord;
+            }
+         </script>
+         <script  type="text/glsl-shader" data-gl-type="fragment-shader">
+            precision mediump float;
+            varying vec2 v_texcoord;
+            uniform sampler2D u_texture;
+            uniform sampler2D b_texture;
+            void main()
+            {
+               gl_FragColor = texture2D(u_texture, v_texcoord);
+            }
+         </script>
+         <script src="./textureManual2/textureManual2.js"></script>
+      </canvas>
+   </div>
+   <div class="sample">
+      Just texture<br/>
+      <canvas id="SquareBWTextureMap" width = "200" height = "200">
+         <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
+            attribute vec2 a_position;
+            attribute vec2 a_texcoord;
+            //uniform mat4 u_matrix;
+            varying vec2 v_texcoord;
+            void main()
+            {
+               //gl_Position = u_matrix * vec4(a_position, 0, 1);
+               gl_Position = vec4(a_position, 0, 1);
+               v_texcoord  = a_texcoord;
+            }
+         </script>
+         <script  type="text/glsl-shader" data-gl-type="fragment-shader">
+            precision mediump float;
+            varying vec2 v_texcoord;
+            uniform sampler2D u_texture;
+            void main()
+            {
+               gl_FragColor = texture2D(u_texture, v_texcoord);
+            }
+         </script>
+         <script src="./textureManual2/texture.strip.js"></script>
+      </canvas>
+   </div><br/>
+   <div class="sample">
+      Texture only, from pixels<br/>
+      <canvas id="SquareCanvTextureMap" width = "200" height = "200">
+         <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
+            attribute vec2 a_position;
+            attribute vec2 a_texcoord;
+            varying vec2 v_texcoord;
+            void main()
+            {
+               gl_Position = vec4(a_position, 0, 1); // Yet must be a vec4
+               v_texcoord  = a_texcoord;
+            }
+         </script>
+         <script  type="text/glsl-shader" data-gl-type="fragment-shader">
+            precision mediump float;
+            varying vec2 v_texcoord;
+            uniform sampler2D u_texture;
+            void main()
+            {
+               gl_FragColor = texture2D(u_texture, v_texcoord);
+            }
+         </script>
+         <script src="./textureManual2/texture.strip.canv.js"></script>
+      </canvas>
+   </div><br/>
+   <div class="sample">
+      Texture only from element (canvas/div/img)<br/>
+      <canvas id="SquareCanvTextureMap" width = "200" height = "200">
+         <script type="text/glsl-shader" data-gl-type="vertex-shader" data-gl-program="texture">
+            #version 300 es
+            in vec2 a_position;
+            in vec2 a_texcoord;
+            out vec2 v_texcoord;
+            void main()
+            {
+               gl_Position = vec4 (a_position, 0, 1); // Yet must be a vec4
+               v_texcoord = a_texcoord;
+            }
+         </script>
+         <script type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-program="texture">
+            #version 300 es
+            precision highp float;
+            in vec2 v_texcoord;
+            uniform sampler2D u_texture;
+            out vec4 outColor;
+            void main()
+            {
+               outColor = texture(u_texture, v_texcoord);
+            }
+         </script>
+         <script src="./textureManual2/texture.strip.canv.glsl300.js"></script>
+      </canvas>
+   </div><br/>
+
+   <a href="./tutorials.html">Tutorials</a>
+
 
 </body>
 </html>
