Unify heart cone examples

--- a/canvas2dExperiments.html
+++ b/canvas2dExperiments.html
@@ -61,6 +61,7 @@
    </script>
 </head>
 <body>
+   TODO: Move this to WebGraphis project and take the script from Conway's game of life<br/>
    <canvas id="myCanvas" width="600" height="500" style="border:1px solid #000000;"></canvas>
 </body>
 </html>
