Reorganize and rename files for clarity and consistency In regard to heart geometries and methods of coding

--- a/heart.cone.rawgeometry.html
+++ b/heart.cone.rawgeometry.html
@@ -64,10 +64,11 @@
          </script>
       </canvas>
    </div> <br/>
-     <div class="sample">
+   <div class="sample">
       Cone TRIANGLES (grad), <br />
       Raw Geometry, Double Coated <br/>
       Conditional Shader, just works as good as it is experiment<br/>
+      Line Strip for showing mesh. Works probably because it is indexed<br/>
       <canvas id = "cone1 heart geometry" width = "400" height = "400"  class="yellow">
          <script src="./heart.cone.rawgeometry/cone_heart_rawgeometry_coatedvaos_conditionalshader.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
