--- a/heart.cone.rawgeometry.html
+++ b/heart.cone.rawgeometry.html
@@ -6,6 +6,7 @@
    <script src="./lib/js/math/3dmath.js"></script>
 </head>
 <body>
+   TODO: Review the geometry again, according to LEFT/RIGHT handed systems<br/>
    TODO: Enable each by menu<br/>
    <div class="sample">
       <br />
